--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-3">
-        <div class="txt-heading">Shopping Cart</div>
+        <h3 class="txt-heading">Shopping Cart</h3>
     </div>
     <div class="col-xs-9">
           <%= button_to 'カートを空にする', delete_all_public_cart_items_path, method: :delete, data: {confirm: 'カートを空にして本当によろしいですか？'}, class: 'btn btn-danger',style:"float:right;margin:10px;" %></td>
