--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -82,7 +82,9 @@
                             <%= link_to"Your Orders",root_path  %>
                         </div>
                         <div class="mypage_detail__orders_info">
-                            <p>You got xxx orders</p>
+                            <p>You got 
+                            <%=  %>
+                             orders</p>
                         </div>
                     </div>
                 </div>
