--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -40,7 +40,7 @@ html lang="ja"
                             li= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-light" ,method: :delete
                         - else
                             li= link_to "ページトップ",root_path, class: "btn btn-light"
-                            li= link_to "About", root_path, class: "btn btn-light"
+                            li= link_to "About", about_public_users_path, class: "btn btn-light"
                             li= link_to "新規登録",  new_user_registration_path, class: "btn btn-light"
                             li= link_to "ログイン", user_session_path, class: "btn btn-light"
         .container-fluid
