--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -68,7 +68,7 @@
                     </div>
                     <div class="mypage_detail__orders_info">
                         <p>You got
-                        <%= @order_detail.count %>
+                        <%#= @order_detail.count %>
                         orders</p>
                     </div>
                 </div>
