--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,8 +9,8 @@ html lang="ja"
     = csp_meta_tag
     script crossorigin="anonymous" src="https://kit.fontawesome.com/a1965c550c.js" 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    script src="https://js.pay.jp/" type="text/javascript"
+    / = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    / script src="https://js.pay.jp/" type="text/javascript"
   body
     .wrapper
         header
