--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html lang="ja"
                 .navbar.navbar-inverse.opacity.margin
                     nav.nav.navbar-nav.navbar-left
                     = link_to root_path do
-                        image src="/assets/picselogo.png" style="width:10%;"
+                        image-url src="/assets/picselogo.png" style="width:10%;"
                     ul.nav.navbar-nav.navbar-right
                         - if user_signed_in?
                             li[style="margin:15px 20px 0 0;color:white;"]
