--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -67,13 +67,13 @@
                         <%= link_to"Your Orders",sold_public_order_path(@user)  %>
                     </div>
                     <div class="mypage_detail__orders_info">
-                        <% if @order_detail.empty? %>
-                            Your order is nothing
-                        <% else %>
-                            <p>You got
-                            <%= @order_detail.count %>
-                            orders</p>
-                        <% end %>
+                        <%# if @order_detail.empty? %>
+                            
+                        <%# else %>
+                            <p>
+                            <%#= @order_detail.count %>
+                            </p>
+                        <%# end %>
                     </div>
                 </div>
             </div>
