edited_admin_order

--- a/app/views/admins/orders/show.html.erb
+++ b/app/views/admins/orders/show.html.erb
@@ -68,7 +68,7 @@
                     </table>
                 </div>
                 <div class="user_details"style="height:20px;width:100%;background-color:black;margin-top:10px;" >お客様情報</div>
-                    <h5> <%= @order_payment %>払い</h5>
+                    <h5> <%= @order.payment_method %>払い</h5>
 
                     <h5>〒<%= @order.postal_code%></h5>
                     <h5> <%= @order.address%></h5>
