--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -1,2 +1,26 @@
-h1 Admins::Orders#index
-p Find me in app/views/admins/orders/index.html.slim
+<h3 >注文履歴一覧</h3>
+<table class="table table-hover table-inverse">
+    <tr style="background-color:lightgray">
+      <th>購入日時</th><th>購入個数</th><th>合計金額</th>
+    </tr>
+    <tbody>
+        <% @orders.each do |order|%>
+            <tr onclick='window.location="<%= '/admins/orders/' + order.id.to_s %>"' role="link">
+                <% amount_sum = 0%>
+                <td>
+                    <%= order.created_at.strftime("%Y/%m/%d %H:%M:%S")%>
+                </td>
+                <% order.order_details.each do |order_detail|  %>
+                    <% amount = order_detail.amount  %>
+                    <% amount_sum = amount_sum + amount  %>
+                <% end %>
+                <td>
+                    <%= amount_sum %>
+                </td>
+                <td>
+                    <%= order.total_payment %>
+                </td>
+            </tr>
+        <% end %>
+    </tbody>
+</table>
