--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html lang="ja"
     = csp_meta_tag
     script crossorigin="anonymous" src="https://kit.fontawesome.com/a1965c550c.js" 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    / = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application'
     / script src="https://js.pay.jp/" type="text/javascript"
   body
     .wrapper
@@ -29,7 +29,7 @@ html lang="ja"
                             li.nav-item= link_to "マイページ", my_page_public_users_path, class: "btn btn-light nav-link"
                             li.nav-item= link_to "写真一覧",  public_photos_path, class: "btn btn-light nav-link"
                             li.nav-item= link_to "カート", public_cart_items_path, class: "btn btn-light nav-link"
-                            li.nav-item= link_to "ログアウト", destroy_user_session_path, class: "btn btn-light nav-link",method: :get
+                            li.nav-item= link_to "ログアウト", destroy_user_session_path, class: "btn btn-light nav-link",method: :delete
                             li.nav-item[style="margin:15px 20px 0 0;"]
                                  = form_tag(public_hashtag_path, method: :get) do 
                                     =text_field_tag :hashname_cont
@@ -38,7 +38,7 @@ html lang="ja"
                             li= link_to "写真一覧", top_admins_photos_path, class: "btn btn-light"
                             li= link_to "会員一覧", admins_users_path, class: "btn btn-light"
                             li= link_to "注文履歴一覧", admins_orders_path, class: "btn btn-light"
-                            li= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-light" ,method: :get
+                            li= link_to "ログアウト", destroy_admin_session_path, class: "btn btn-light" ,method: :delete
                         - else
                             li= link_to "ページトップ",root_path, class: "btn btn-light"
                             li= link_to "About", about_public_users_path, class: "btn btn-light"
