--- a/app/views/public/users/my_page.html.erb
+++ b/app/views/public/users/my_page.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="mypage_box">
         <div class="col-xs-5 col-xs-offset-1">
-            <div class="about">
+            <div class="mypage_view">
                 <h6>About <%= @user.first_name + @user.last_name %></h6>
                 <%= link_to edit_public_user_path(@user)do%>
                     <i class="fas fa-user-edit"></i>
